Fix #7 and fix #8